Cleaned up fan block code
- Use new Block API methods
- Get textures using the default atlas field

--- a/src/main/resources/lang/simpletech/en_US.lang
+++ b/src/main/resources/lang/simpletech/en_US.lang
@@ -1,7 +1,7 @@
-tile.block.fan.unpowered.name=Fan
-tile.block.fan.unpowered.desc=Fan goes whoosh!
-tile.block.fan.powered.name=Powered Fan
-tile.block.fan.powered.desc=Fan goes whoosh!
+tile.simpletech.fan.unpowered.name=Fan
+tile.simpletech.fan.unpowered.desc=Fan goes whoosh!
+tile.simpletech.fan.powered.name=Powered Fan
+tile.simpletech.fan.powered.desc=Fan goes whoosh!
 tile.block.jumppad.name=Jump Pad
 tile.block.jumppad.desc=Boing! Hop hop!
 tile.chest.trapped.name=Trapped Chest
