Updated language files

--- a/src/main/resources/lang/simpletech/en_US.lang
+++ b/src/main/resources/lang/simpletech/en_US.lang
@@ -2,11 +2,11 @@ tile.simpletech.fan.unpowered.name=Fan
 tile.simpletech.fan.unpowered.desc=Fan goes whoosh!
 tile.simpletech.fan.powered.name=Powered Fan
 tile.simpletech.fan.powered.desc=Fan goes whoosh!
-tile.block.jumppad.name=Jump Pad
-tile.block.jumppad.desc=Boing! Hop hop!
-tile.chest.trapped.name=Trapped Chest
-tile.chest.trapped.desc=It's a trap!
-tile.block.lightsensor.name=Light Sensor
-tile.block.lightsensor.desc=...and there was light
-tile.block.allocator.name=Allocator
-tile.block.allocator.desc=
+tile.simpletech.jumppad.name=Jump Pad
+tile.simpletech.jumppad.desc=Boing! Hop hop!
+tile.simpletech.chest.trapped.name=Trapped Chest
+tile.simpletech.chest.trapped.desc=It's a trap!
+tile.simpletech.lightsensor.name=Light Sensor
+tile.simpletech.lightsensor.desc=...and there was light
+tile.simpletech.allocator.name=Allocator
+tile.simpletech.allocator.desc=WIP
