--- a/src/main/resources/lang/simpletech/fr_FR.lang
+++ b/src/main/resources/lang/simpletech/fr_FR.lang
@@ -2,11 +2,11 @@ tile.simpletech.fan.unpowered.name=Ventilateur
 tile.simpletech.fan.unpowered.desc=
 tile.simpletech.fan.powered.name=Ventilateur en marche
 tile.simpletech.fan.powered.desc=
-tile.block.jumppad.name=Trampoline
-tile.block.jumppad.desc=Boing !
-tile.chest.trapped.name=Coffre piégé
-tile.chest.trapped.desc=J'active ma carte piège !
-tile.block.lightsensor.name=Détecteur de lumière
-tile.block.lightsensor.desc=... et la lumière fut
-tile.block.allocator.name=Allocateur
-tile.block.allocator.desc=
+tile.simpletech.jumppad.name=Trampoline
+tile.simpletech.jumppad.desc=Boing !
+tile.simpletech.chest.trapped.name=Coffre piégé
+tile.simpletech.chest.trapped.desc=J'active ma carte piège !
+tile.simpletech.lightsensor.name=Détecteur de lumière
+tile.simpletech.lightsensor.desc=... et la lumière fut
+tile.simpletech.allocator.name=Allocateur
+tile.simpletech.allocator.desc=WIP
