Updated the American English translation and removed the French one

--- a/src/main/resources/lang/simpletech/en_US.lang
+++ b/src/main/resources/lang/simpletech/en_US.lang
@@ -7,8 +7,8 @@ tile.simpletech.jumppad.desc=Boing! Hop hop!
 tile.simpletech.chest.trapped.name=Trapped Chest
 tile.simpletech.chest.trapped.desc=It's a trap!
 tile.simpletech.lightsensor.name=Light Sensor
-tile.simpletech.lightsensor.desc=...and there was light
+tile.simpletech.lightsensor.desc=...and there was light.
 tile.simpletech.allocator.name=Allocator
-tile.simpletech.allocator.desc=WIP
+tile.simpletech.allocator.desc=Items placed near the input will be sucked in and ejected through the output.
 item.simpletech.not.gate.name=Not Gate
-item.simpletech.not.gate.desc=WIP
+item.simpletech.not.gate.desc=Invert a redstone signal.
